--- a/src/partials/nav-menu.html
+++ b/src/partials/nav-menu.html
@@ -1,47 +1,45 @@
-<div class="nav-menu">
+<div menu class="nav-menu">
   <div class="upper">
-    <div class="header__mobile">
-      <a href="./"
-        ><img
-          class="logo"
-          srcset="
-            images/logo/mobile/logo_40.png    40w,
-            images/logo/tablet/logo_48.png    48w,
-            images/logo/desktop/logo_60.png   60w,
-            images/logo/mobile/logo_80.png    80w,
-            images/logo/tablet/logo_96.png    96w,
-            images/logo/desktop/logo_120.png 120w
-          "
-          src="./images/logo/mobile/logo_40.png"
-          sizes="(min-width: 1200px) 60px, (min-width: 768px) 48px, (min-width: 320px) 40px, 100vw"
-          alt="logo-ice-cream"
-        />
-      </a>
-      <button class="burger">
-        <svg class="header__svg" width="32" height="32">
-          <use href="./images/svg/symbol-defs.svg#burger1"></use>
-        </svg>
-      </button>
-    </div>
-    <ul class="navigation">
-      <li class="navigation__item">
-        <a class="navigation__link" href="index.html">Home</a>
-      </li>
-      <li class="navigation__item">
-        <a class="navigation__link" href="#about">How it’s made?</a>
-      </li>
-      <li class="navigation__item">
-        <a class="navigation__link" href="#products">Our products</a>
-      </li>
-      <li class="navigation__item">
-        <a class="navigation__link" href="#contacts">Contact</a>
-      </li>
-    </ul>
-    <button class="nav-button">
-      Buy now
-      <svg class="nav-button__icon" width="12" height="12">
-        <use href="./images/svg/symbol-defs.svg#bird"></use>
+    <a href="./"
+      ><img
+        class="logo"
+        srcset="
+          images/logo/mobile/logo_40.png    40w,
+          images/logo/tablet/logo_48.png    48w,
+          images/logo/desktop/logo_60.png   60w,
+          images/logo/mobile/logo_80.png    80w,
+          images/logo/tablet/logo_96.png    96w,
+          images/logo/desktop/logo_120.png 120w
+        "
+        src="./images/logo/mobile/logo_40.png"
+        sizes="(min-width: 1200px) 60px, (min-width: 768px) 48px, (min-width: 320px) 40px, 100vw"
+        alt="logo-ice-cream"
+      />
+    </a>
+    <button class="burger">
+      <svg class="header__svg" width="32" height="32">
+        <use href="./images/svg/symbol-defs.svg#burger1"></use>
       </svg>
     </button>
   </div>
+  <ul class="navigation">
+    <li class="navigation__item">
+      <a class="navigation__link" href="index.html">Home</a>
+    </li>
+    <li class="navigation__item">
+      <a class="navigation__link" href="#about">How it’s made?</a>
+    </li>
+    <li class="navigation__item">
+      <a class="navigation__link" href="#products">Our products</a>
+    </li>
+    <li class="navigation__item">
+      <a class="navigation__link" href="#contacts">Contact</a>
+    </li>
+  </ul>
+  <button class="nav-button">
+    Buy now
+    <svg class="nav-button__icon" width="12" height="12">
+      <use href="./images/svg/symbol-defs.svg#bird"></use>
+    </svg>
+  </button>
 </div>
