--- a/src/sass/components/_nav-menu.scss
+++ b/src/sass/components/_nav-menu.scss
@@ -1,16 +1,28 @@
 .nav-menu {
   z-index: 10;
-  position: absolute;
+  position: fixed;
+  left: 0;
+
   text-align: center;
   width: 100%;
+  height: 100%;
+  transform: translateX(100%);
+  overflow-y: scroll;
+  transition: transform getAnim(time) getAnim(func);
+
+  &--open {
+    transform: translateX(0);
+  }
 
   @media screen and (max-width: 550px) {
+    top: 60px;
     background-color: getBgColor(main-green);
     padding: 39px 32px 64px;
     height: 568px;
   }
 
   @media screen and (min-width: 551px) {
+    top: 0;
     background-color: getBgColor(second-green);
     padding: 56px 32px 64px;
     height: 1024px;
@@ -56,3 +68,72 @@
     color: getColor(primary-dark);
   }
 }
+
+.upper {
+  @media screen and (max-width: 550px) {
+    display: none;
+  }
+}
+
+.burger-toggle {
+  transition: transform 500ms getAnim(func);
+  z-index: 10;
+
+  // &--append {
+  //   margin-left: auto;
+  // }
+
+  &:hover,
+  &:focus {
+    fill: getColor(accent);
+  }
+
+  &:active {
+    transform: scale(1.5);
+    transition: transform 500ms getAnim(func);
+  }
+
+  // @include respond-to(tablet) {
+  //   display: none;
+  // }
+
+  .cross {
+    display: none;
+  }
+
+  &--enabled {
+    .cross {
+      display: block;
+    }
+
+    .burger {
+      display: none;
+    }
+  }
+}
+
+// -----------
+// @include respond-to(max-mobile) {
+//   position: fixed;
+//   left: 0;
+//   top: 0;
+//   height: 100%;
+//   width: 100%;
+//   padding: 48px 40px 48px;
+//   background-color: getColor(primary-white);
+//   z-index: 8;
+//   transform: translateX(100%);
+//   @include base-transition(transform);
+//   overflow-y: scroll;
+
+//   &--open {
+//     transform: translateX(0);
+//   }
+// }
+
+// @include respond-to(tablet) {
+//   display: flex;
+//   justify-content: space-between;
+//   align-items: center;
+//   width: 100%;
+// }
