--- a/src/sass/main.css
+++ b/src/sass/main.css
@@ -77,6 +77,10 @@ button {
   overflow: hidden;
 }
 
+.scroll-hidden {
+  overflow: hidden;
+}
+
 /* header */
 .header {
   padding-top: 12px;
@@ -1459,12 +1463,21 @@ textarea {
 
 .nav-menu {
   z-index: 10;
-  position: absolute;
+  position: fixed;
+  left: 0;
   text-align: center;
   width: 100%;
+  height: 100%;
+  transform: translateX(100%);
+  overflow-y: scroll;
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.nav-menu--open {
+  transform: translateX(0);
 }
 @media screen and (max-width: 550px) {
   .nav-menu {
+    top: 60px;
     background-color: #84a178;
     padding: 39px 32px 64px;
     height: 568px;
@@ -1472,6 +1485,7 @@ textarea {
 }
 @media screen and (min-width: 551px) {
   .nav-menu {
+    top: 0;
     background-color: #97af8d;
     padding: 56px 32px 64px;
     height: 1024px;
@@ -1515,6 +1529,33 @@ textarea {
 }
 .navigation__link:hover, .navigation__link:focus {
   color: #131313;
+}
+
+@media screen and (max-width: 550px) {
+  .upper {
+    display: none;
+  }
+}
+
+.burger-toggle {
+  transition: transform 500ms cubic-bezier(0.4, 0, 0.2, 1);
+  z-index: 10;
+}
+.burger-toggle:hover, .burger-toggle:focus {
+  fill: #f8d24e;
+}
+.burger-toggle:active {
+  transform: scale(1.5);
+  transition: transform 500ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.burger-toggle .cross {
+  display: none;
+}
+.burger-toggle--enabled .cross {
+  display: block;
+}
+.burger-toggle--enabled .burger {
+  display: none;
 }
 
 @media screen and (max-width: 550px) {
