--- a/src/sass/main.css
+++ b/src/sass/main.css
@@ -1538,7 +1538,7 @@ textarea {
 }
 
 .burger-toggle {
-  transition: transform 500ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: transform 500ms cubic-bezier(0.4, 0, 0.2, 1), fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
   z-index: 10;
 }
 .burger-toggle:hover, .burger-toggle:focus {
