--- a/src/partials/gallery.html
+++ b/src/partials/gallery.html
@@ -1,16 +1,18 @@
 <section class="gallery">
     <div class="gallery__container">
         <h2 class="gallery__title visually-hidden">Gallery</h2>
-        <img class="gallery__card"
-        srcset="
-        ./images/gallery/main-ice/mobile/main-ice_280.jpg 280w,
-        ./images/gallery/main-ice/mobile/main-ice_560.jpg 560w,
-        ./images/gallery/main-ice/tablet/main-ice_704.jpg 704w,
-        ./images/gallery/main-ice/desktop/gallery-main_1013.jpg 1013w,
-        ./images/gallery/main-ice/tablet/main-ice_1408.jpg 1408w,
-        ./images/gallery/main-ice/desktop/gallery-main_2026.jpg 2026w
-        "
-        sizes="(min-width: 1200px) 1013px, (min-width: 768px) 704px, (min-width: 480px) 280px, 100vw"
-        src="./images/gallery/main-ice/mobile/main-ice_280.jpg" 
-        alt="ice main image">
+        <div class="gallery__thumb">
+            <img class="gallery__card"
+                srcset="
+                ./images/gallery/main-ice/mobile/main-ice_280.jpg 280w,
+                ./images/gallery/main-ice/mobile/main-ice_560.jpg 560w,
+                ./images/gallery/main-ice/tablet/main-ice_704.jpg 704w,
+                ./images/gallery/main-ice/desktop/gallery-main_1013.jpg 1013w,
+                ./images/gallery/main-ice/tablet/main-ice_1408.jpg 1408w,
+                ./images/gallery/main-ice/desktop/gallery-main_2026.jpg 2026w
+                "
+                sizes="(min-width: 1200px) 1013px, (min-width: 768px) 704px, (min-width: 480px) 280px, 100vw"
+                src="./images/gallery/main-ice/mobile/main-ice_280.jpg" 
+                alt="ice main image">
+        </div>
     </div>
