--- a/src/partials/about.html
+++ b/src/partials/about.html
@@ -1,17 +1,25 @@
-<section class="about">
+<section class="about" id="about">
 <div class="about__container container">
-    <span class="about__label">tradition and love </span>
-    <h2 class="about__titel">how it’s made?</h2>
-
-<div class="about__thumb">
+    <div class="about__topic"><span class="about__label">tradition and love </span>
+    <h2 class="about__title">how it’s made?</h2>
+    </div>
+<div class="about__content">
+    <div class="about__thumb">
     <img
-    class="about__cow" 
-    sizes="(min-width: 319px) 279px"
-    src="./images/cow/mobile/cow_279.png" 
+    class="about__cow"
+    srcset="./images/cow/mobile/cow_279.png 279w,
+            ./images/cow/tablet/cow_330.png 330w,
+            ./images/cow/desktop/cow_490.png 490w,
+            ./images/cow/mobile/cow_558.png 558w,
+            ./images/cow/tablet/cow_660.png 660w,
+            ./images/cow/desktop/cow_980.png 980w" 
+    sizes="(min-width: 1200px) 490px, (min-width: 768px) 330px, (min-width: 320px) 279px, 100vw"
+    src="./images/cow/desktop/cow_490.png"
     alt="cow"
-    width="279">
-</div>
+    width="490">
+    </div>
 
+    <div class="about__info">
     <p class="about__values"> Ice is a place where you will become not only a l
         ittle happier, but also healthier. Health is the main value for us, 
         and we follow it when creating our handmade desserts. </p>
@@ -21,13 +29,18 @@
         children from the age of three years. Sweets lovers can expect 55 types 
         of ice cream, 15 types of coffee and 23 milkshakes. </p>
 
-     <button type="button" 
+    <p class="about__recap">This is enough to choose ice cream and 
+            coffee for any mood!</p>
+        
+    <button type="button" 
             class="about__btn">
             <span class="about__btn--text">Read more</span> 
             <svg class="about__btn--img" width="12" height="12">
-       <use href="./images/svg/symbol-defs.svg#bird"></use>
-     </svg>
-        </button>   
+                <use href="./images/svg/symbol-defs.svg#bird"></use>
+            </svg>
+    </button> 
+    </div>
+</div>  
 
 </div>
 </section>
