--- a/src/sass/index.css
+++ b/src/sass/index.css
@@ -594,33 +594,41 @@ button {
 }
 
 .about__container {
+  display: flex;
+  flex-direction: column;
   padding-top: 61px;
-  padding-bottom: 64px;
+  padding-bottom: 50px;
+  padding-left: 20px;
+  padding-right: 20px;
+}
+@media screen and (min-width: 768px) {
+  .about__container {
+    padding-top: 60px;
+    padding-bottom: 60px;
+    padding-left: 32px;
+    padding-right: 34px;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .about__container {
+    padding-top: 60px;
+    padding-bottom: 60px;
+    padding-left: 16px;
+    padding-right: 16px;
+  }
 }
 
-.about__container {
+@media screen and (min-width: 768px) {
+  .about__content {
+    display: flex;
+  }
+}
+
+.about__topic {
   display: flex;
   justify-content: center;
   flex-direction: column;
   align-items: center;
-}
-
-.about__thumb {
-  position: relative;
-  width: 279px;
-  height: 279px;
-  background-color: #F8D24E;
-  border-radius: 50%;
-  background: linear-gradient(0deg, rgba(248, 210, 78, 0.7), rgba(248, 210, 78, 0.7)), #D9D9D9;
-  box-shadow: 0px 4.48583px 16.8218px rgba(153, 114, 23, 0.25);
-  border-radius: 50%;
-  margin-bottom: 62px;
-}
-
-.about__cow {
-  position: absolute;
-  top: 22px;
-  width: 279px;
 }
 
 .about__label {
@@ -631,9 +639,21 @@ button {
   color: #fcfcfc;
   margin-bottom: 12px;
 }
+@media screen and (min-width: 768px) {
+  .about__label {
+    font-weight: 800;
+    font-size: 22px;
+    line-height: 1.23;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .about__label {
+    font-size: 30px;
+  }
+}
 
-.about__titel {
-  font-family: "Seymour One";
+.about__title {
+  font-family: "Seymour One", sans-serif;
   font-weight: 400;
   font-size: 30px;
   line-height: 1.27;
@@ -642,29 +662,176 @@ button {
   text-transform: uppercase;
   color: #fcfcfc;
   margin-bottom: 32px;
-  width: 200px;
+}
+@media screen and (max-width: 767px) {
+  .about__title {
+    width: 200px;
+  }
+}
+@media screen and (min-width: 768px) {
+  .about__title {
+    font-size: 34px;
+    line-height: 1.26;
+    letter-spacing: 0.06em;
+    margin-bottom: 72px;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .about__title {
+    font-size: 36px;
+    line-height: 1.25;
+    margin-bottom: 82px;
+  }
+}
+
+.about__thumb {
+  position: relative;
+  width: 279px;
+  height: 279px;
+  background-color: #F8D24E;
+  border-radius: 50%;
+  background: linear-gradient(0deg, rgba(248, 210, 78, 0.7), rgba(248, 210, 78, 0.7)), #D9D9D9;
+  box-shadow: 0px 4.48583px 16.8218px rgba(153, 114, 23, 0.25);
+}
+@media screen and (max-width: 767px) {
+  .about__thumb {
+    margin-bottom: 62px;
+  }
+}
+@media screen and (min-width: 768px) {
+  .about__thumb {
+    width: 330px;
+    height: 330px;
+    margin-right: 38px;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .about__thumb {
+    width: 490px;
+    height: 490px;
+    margin-right: 110px;
+  }
+}
+
+.about__cow {
+  position: absolute;
+  top: 22px;
+  width: 279px;
+}
+@media screen and (min-width: 768px) {
+  .about__cow {
+    top: 26px;
+    width: 330px;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .about__cow {
+    top: 39px;
+    width: 490px;
+  }
+}
+
+.about__info {
+  width: 220px;
+}
+@media screen and (max-width: 767px) {
+  .about__info {
+    margin-right: auto;
+    margin-left: auto;
+  }
+}
+@media screen and (min-width: 768px) {
+  .about__info {
+    width: 334px;
+    padding-top: 8px;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .about__info {
+    width: 463px;
+    padding-top: 90px;
+  }
 }
 
 .about__values {
   font-weight: 400;
   font-size: 12px;
-  line-height: 2.1;
-  text-align: center;
+  line-height: 1.76;
   letter-spacing: 0.04em;
   color: #fcfcfc;
-  width: 220px;
   margin-bottom: 4px;
+}
+@media screen and (max-width: 767px) {
+  .about__values {
+    text-align: center;
+  }
+}
+@media screen and (min-width: 768px) {
+  .about__values {
+    margin-bottom: 8px;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .about__values {
+    font-size: 16px;
+  }
 }
 
 .about__recipes {
   font-weight: 400;
   font-size: 12px;
-  line-height: 1.9;
-  text-align: center;
-  letter-spacing: 0.04em;
+  line-height: 1.62;
   color: #fcfcfc;
-  width: 220px;
   margin-bottom: 10px;
+}
+@media screen and (max-width: 767px) {
+  .about__recipes {
+    text-align: center;
+  }
+}
+@media screen and (min-width: 768px) {
+  .about__recipes {
+    line-height: 1.76;
+    letter-spacing: 0.04em;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .about__recipes {
+    line-height: 1.94;
+    font-size: 14px;
+  }
+}
+
+@media screen and (max-width: 767px) {
+  .about__recap {
+    position: absolute;
+    width: 1px;
+    height: 1px;
+    margin: -1px;
+    border: 0;
+    padding: 0;
+    white-space: nowrap;
+    -webkit-clip-path: inset(100%);
+            clip-path: inset(100%);
+    clip: rect(0 0 0 0);
+    overflow: hidden;
+  }
+}
+@media screen and (min-width: 768px) {
+  .about__recap {
+    font-weight: 400;
+    font-size: 12px;
+    line-height: 1.94;
+    letter-spacing: 0.04em;
+    color: #fcfcfc;
+    margin-bottom: 32px;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .about__recap {
+    font-size: 14px;
+    margin-bottom: 54px;
+  }
 }
 
 .about__btn {
@@ -676,6 +843,12 @@ button {
   border: 2px solid #f8d24e;
   border-radius: 10px;
   background: #F8D24E;
+}
+@media screen and (max-width: 767px) {
+  .about__btn {
+    margin-right: auto;
+    margin-left: auto;
+  }
 }
 
 .about__btn:hover {
