--- a/src/partials/nav-menu.html
+++ b/src/partials/nav-menu.html
@@ -16,9 +16,17 @@
         alt="logo-ice-cream"
       />
     </a>
-    <button class="burger">
-      <svg class="header__svg" width="32" height="32">
-        <use href="./images/svg/symbol-defs.svg#burger1"></use>
+    <button
+      tablet-cross
+      class="burger burger-toggle"
+      aria-label="open menu"
+      aria-expanded="false"
+    >
+      <svg class="" width="32" height="32">
+        <use
+          class="tablet-cross"
+          href="./images/svg/symbol-defs.svg#close-white"
+        ></use>
       </svg>
     </button>
   </div>
