--- a/src/sass/main.css
+++ b/src/sass/main.css
@@ -595,11 +595,13 @@ button {
 }
 
 .footer__text {
+  margin-bottom: 60px;
   text-transform: uppercase;
   color: #fcfcfc;
 }
-@media screen and (min-width: 768px) {
+@media screen and (min-width: 768px) and (max-width: 1199px) {
   .footer__text {
+    margin-bottom: 32px;
     width: 352px;
   }
 }
@@ -632,17 +634,21 @@ button {
 }
 
 .footer__undertitle {
-  margin-bottom: 60px;
   font-size: 34px;
   line-height: 1.2058823529;
   letter-spacing: 0.04em;
 }
-@media screen and (min-width: 768px) and (max-width: 1199px) {
+@media screen and (min-width: 768px) {
   .footer__undertitle {
-    margin-bottom: 32px;
     font-size: 48px;
     line-height: 1.2291666667;
     letter-spacing: 0.06em;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .footer__undertitle {
+    font-size: 58px;
+    line-height: 1.224137931;
   }
 }
 
@@ -656,6 +662,7 @@ button {
 @media screen and (min-width: 1200px) {
   .footer__blocks {
     align-items: baseline;
+    border-bottom: 1px solid #e1e1e1;
   }
 }
 
@@ -720,9 +727,11 @@ button {
   color: #fcfcfc;
 }
 
-.footer__copyright-container {
-  border-top: 1px solid #e1e1e1;
-  width: 100%;
+@media screen and (max-width: 1199px) {
+  .footer__copyright-container {
+    border-top: 1px solid #e1e1e1;
+    width: 100%;
+  }
 }
 
 .footer__copyright {
@@ -1722,7 +1731,7 @@ textarea {
 .nav-menu--open {
   transform: translateX(0);
 }
-@media screen and (max-width: 550px) {
+@media screen and (max-width: 767.5px) {
   .nav-menu {
     top: 60px;
     background-color: #84a178;
@@ -1730,11 +1739,11 @@ textarea {
     height: 568px;
   }
 }
-@media screen and (min-width: 551px) {
+@media screen and (min-width: 768px) {
   .nav-menu {
     top: 0;
     background-color: #97af8d;
-    padding: 56px 32px 64px;
+    padding: 20px 32px 64px;
     height: 1024px;
   }
 }
@@ -1747,25 +1756,25 @@ textarea {
 .navigation {
   font-weight: 700;
 }
-@media screen and (max-width: 550px) {
+@media screen and (max-width: 767.5px) {
   .navigation {
     font-size: 32px;
     line-height: 1.22;
     margin-bottom: 110px;
   }
 }
-@media screen and (min-width: 551px) {
+@media screen and (min-width: 768px) {
   .navigation {
     font-size: 48px;
     line-height: 1.23;
   }
 }
-@media screen and (max-width: 550px) {
+@media screen and (max-width: 767.5px) {
   .navigation__item:not(:last-child) {
     margin-bottom: 32px;
   }
 }
-@media screen and (min-width: 551px) {
+@media screen and (min-width: 768px) {
   .navigation__item:not(:last-child) {
     margin-bottom: 40px;
   }
@@ -1778,9 +1787,19 @@ textarea {
   color: #131313;
 }
 
-@media screen and (max-width: 550px) {
+.upper {
+  margin-bottom: 76px;
+}
+@media screen and (max-width: 767.5px) {
   .upper {
     display: none;
+  }
+}
+@media screen and (min-width: 768px) {
+  .upper {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
   }
 }
 
@@ -1805,7 +1824,7 @@ textarea {
   display: none;
 }
 
-@media screen and (max-width: 550px) {
+@media screen and (max-width: 767.5px) {
   .nav-button {
     display: flex;
     align-items: center;
@@ -1827,7 +1846,7 @@ textarea {
     fill: currentColor;
   }
 }
-@media screen and (min-width: 551px) {
+@media screen and (min-width: 768px) {
   .nav-button {
     display: none;
   }
