--- a/src/sass/components/_products_modal.scss
+++ b/src/sass/components/_products_modal.scss
@@ -179,6 +179,9 @@
     height: 42px;
     padding: 11px 16px;
     width: 368px;
+    &--comment {
+      height: 84px;
+    }
   }
 }
 
@@ -198,6 +201,9 @@
   left: 12;
   font-size: 12px;
   line-height: 1.4;
+  @media screen and (min-width: 768px) {
+    font-size: 14px;
+  }
 }
 
 .products-form__list {
