--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -16,6 +16,12 @@
         alt="logo-ice-cream"
       />
     </a>
+    <ul class="header__list">
+      <li>Home</li>
+      <li>How it’s made?</li>
+      <li>Our products</li>
+      <li>Contact</li>
+    </ul>
     <button class="burger">
       <svg class="header__svg" width="32" height="32">
         <use href="./images/svg/symbol-defs.svg#burger1"></use>
