додає класи для закриття і відкриття модалки

--- a/src/partials/products_modal.html
+++ b/src/partials/products_modal.html
@@ -1,5 +1,5 @@
-<div class="products-modal__window">
-  <button class="products-modal__close" type="button">
+<div class="modal products-modal__window" data-modal="3">
+  <button class="products-modal__close js-modal-close" type="button">
     <svg width="20" height="20" class="products-modal__icon-close">
       <use href="./images/svg/symbol-defs.svg#close-black"></use>
     </svg>
