--- a/src/sass/main.css
+++ b/src/sass/main.css
@@ -313,7 +313,11 @@ button {
   }
 }
 
-@media screen and (max-width: 7670px) {
+.contacts {
+  position: relative;
+  top: 1130px;
+}
+@media screen and (max-width: 767px) {
   .contacts {
     padding-top: 20px;
     padding-bottom: 30px;
@@ -323,12 +327,14 @@ button {
   .contacts {
     padding-top: 40px;
     padding-bottom: 20px;
+    top: 340px;
   }
 }
 @media screen and (min-width: 1200px) {
   .contacts {
     padding-top: 50px;
     padding-bottom: 60px;
+    top: 580px;
   }
 }
 
@@ -1262,33 +1268,41 @@ button {
 }
 
 .about__container {
+  display: flex;
+  flex-direction: column;
   padding-top: 61px;
-  padding-bottom: 64px;
+  padding-bottom: 50px;
+  padding-left: 20px;
+  padding-right: 20px;
+}
+@media screen and (min-width: 768px) {
+  .about__container {
+    padding-top: 60px;
+    padding-bottom: 60px;
+    padding-left: 32px;
+    padding-right: 34px;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .about__container {
+    padding-top: 60px;
+    padding-bottom: 60px;
+    padding-left: 16px;
+    padding-right: 16px;
+  }
 }
 
-.about__container {
+@media screen and (min-width: 768px) {
+  .about__content {
+    display: flex;
+  }
+}
+
+.about__topic {
   display: flex;
   justify-content: center;
   flex-direction: column;
   align-items: center;
-}
-
-.about__thumb {
-  position: relative;
-  width: 279px;
-  height: 279px;
-  background-color: #F8D24E;
-  border-radius: 50%;
-  background: linear-gradient(0deg, rgba(248, 210, 78, 0.7), rgba(248, 210, 78, 0.7)), #D9D9D9;
-  box-shadow: 0px 4.48583px 16.8218px rgba(153, 114, 23, 0.25);
-  border-radius: 50%;
-  margin-bottom: 62px;
-}
-
-.about__cow {
-  position: absolute;
-  top: 22px;
-  width: 279px;
 }
 
 .about__label {
@@ -1299,9 +1313,21 @@ button {
   color: #fcfcfc;
   margin-bottom: 12px;
 }
+@media screen and (min-width: 768px) {
+  .about__label {
+    font-weight: 800;
+    font-size: 22px;
+    line-height: 1.23;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .about__label {
+    font-size: 30px;
+  }
+}
 
-.about__titel {
-  font-family: "Seymour One";
+.about__title {
+  font-family: "Seymour One", sans-serif;
   font-weight: 400;
   font-size: 30px;
   line-height: 1.27;
@@ -1310,29 +1336,176 @@ button {
   text-transform: uppercase;
   color: #fcfcfc;
   margin-bottom: 32px;
-  width: 200px;
+}
+@media screen and (max-width: 767px) {
+  .about__title {
+    width: 200px;
+  }
+}
+@media screen and (min-width: 768px) {
+  .about__title {
+    font-size: 34px;
+    line-height: 1.26;
+    letter-spacing: 0.06em;
+    margin-bottom: 72px;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .about__title {
+    font-size: 36px;
+    line-height: 1.25;
+    margin-bottom: 82px;
+  }
+}
+
+.about__thumb {
+  position: relative;
+  width: 279px;
+  height: 279px;
+  background-color: #F8D24E;
+  border-radius: 50%;
+  background: linear-gradient(0deg, rgba(248, 210, 78, 0.7), rgba(248, 210, 78, 0.7)), #D9D9D9;
+  box-shadow: 0px 4.48583px 16.8218px rgba(153, 114, 23, 0.25);
+}
+@media screen and (max-width: 767px) {
+  .about__thumb {
+    margin-bottom: 62px;
+  }
+}
+@media screen and (min-width: 768px) {
+  .about__thumb {
+    width: 330px;
+    height: 330px;
+    margin-right: 38px;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .about__thumb {
+    width: 490px;
+    height: 490px;
+    margin-right: 110px;
+  }
+}
+
+.about__cow {
+  position: absolute;
+  top: 22px;
+  width: 279px;
+}
+@media screen and (min-width: 768px) {
+  .about__cow {
+    top: 26px;
+    width: 330px;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .about__cow {
+    top: 39px;
+    width: 490px;
+  }
+}
+
+.about__info {
+  width: 220px;
+}
+@media screen and (max-width: 767px) {
+  .about__info {
+    margin-right: auto;
+    margin-left: auto;
+  }
+}
+@media screen and (min-width: 768px) {
+  .about__info {
+    width: 334px;
+    padding-top: 8px;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .about__info {
+    width: 463px;
+    padding-top: 90px;
+  }
 }
 
 .about__values {
   font-weight: 400;
   font-size: 12px;
-  line-height: 2.1;
-  text-align: center;
+  line-height: 1.76;
   letter-spacing: 0.04em;
   color: #fcfcfc;
-  width: 220px;
   margin-bottom: 4px;
+}
+@media screen and (max-width: 767px) {
+  .about__values {
+    text-align: center;
+  }
+}
+@media screen and (min-width: 768px) {
+  .about__values {
+    margin-bottom: 8px;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .about__values {
+    font-size: 16px;
+  }
 }
 
 .about__recipes {
   font-weight: 400;
   font-size: 12px;
-  line-height: 1.9;
-  text-align: center;
-  letter-spacing: 0.04em;
+  line-height: 1.62;
   color: #fcfcfc;
-  width: 220px;
   margin-bottom: 10px;
+}
+@media screen and (max-width: 767px) {
+  .about__recipes {
+    text-align: center;
+  }
+}
+@media screen and (min-width: 768px) {
+  .about__recipes {
+    line-height: 1.76;
+    letter-spacing: 0.04em;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .about__recipes {
+    line-height: 1.94;
+    font-size: 14px;
+  }
+}
+
+@media screen and (max-width: 767px) {
+  .about__recap {
+    position: absolute;
+    width: 1px;
+    height: 1px;
+    margin: -1px;
+    border: 0;
+    padding: 0;
+    white-space: nowrap;
+    -webkit-clip-path: inset(100%);
+            clip-path: inset(100%);
+    clip: rect(0 0 0 0);
+    overflow: hidden;
+  }
+}
+@media screen and (min-width: 768px) {
+  .about__recap {
+    font-weight: 400;
+    font-size: 12px;
+    line-height: 1.94;
+    letter-spacing: 0.04em;
+    color: #fcfcfc;
+    margin-bottom: 32px;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .about__recap {
+    font-size: 14px;
+    margin-bottom: 54px;
+  }
 }
 
 .about__btn {
@@ -1344,6 +1517,12 @@ button {
   border: 2px solid #f8d24e;
   border-radius: 10px;
   background: #F8D24E;
+}
+@media screen and (max-width: 767px) {
+  .about__btn {
+    margin-right: auto;
+    margin-left: auto;
+  }
 }
 
 .about__btn:hover {
@@ -1443,6 +1622,7 @@ button {
   fill: #131313;
   border: none;
   background-color: transparent;
+  padding: 0;
 }
 
 @media screen and (max-width: 767px) {
@@ -2150,5 +2330,75 @@ textarea {
     display: block;
     left: 16px;
     bottom: 65px;
+  }
+}
+
+.gallery {
+  margin: 0 auto;
+  background-color: transparent;
+  position: absolute;
+  top: -32px;
+  right: 50%;
+  z-index: 100;
+  transform: translateX(50%);
+}
+@media screen and (min-width: 768px) {
+  .gallery {
+    top: -144px;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .gallery {
+    top: -98px;
+  }
+}
+.gallery__container {
+  margin: 0 auto;
+  padding: 0px 20px;
+  min-width: 320px;
+}
+@media screen and (min-width: 480px) {
+  .gallery__container {
+    width: 320px;
+  }
+}
+@media screen and (min-width: 768px) {
+  .gallery__container {
+    width: 768px;
+    padding: 0px 32px;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .gallery__container {
+    width: 1200px;
+    padding-left: 93px;
+    padding-right: 94px;
+  }
+}
+.gallery__thumb {
+  border-radius: 8px;
+  overflow: hidden;
+}
+@media screen and (min-width: 768px) {
+  .gallery__thumb {
+    border-radius: 18px;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .gallery__thumb {
+    border-radius: 24px;
+  }
+}
+.gallery__card {
+  width: 280px;
+}
+@media screen and (min-width: 768px) {
+  .gallery__card {
+    width: 704px;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .gallery__card {
+    width: 1013px;
   }
 }/*# sourceMappingURL=main.css.map */
