--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -15,6 +15,7 @@
 
 // bacdrop-modal
 @import './components/backdrop-modal';
+@import './components/modal-about';
 
 //contacts-btn
 @import './components/contacts-btn';
