--- a/src/partials/modal-about.html
+++ b/src/partials/modal-about.html
@@ -1,6 +1,6 @@
-<div class="modal-about__window" data-modal="5">
+<div class="modal-about__window" data-modal="4">
     <button class="modal-window__close js-modal-close" type="button">
-        <svg width="24" height="24">
+        <svg class="modal-window__svg" width="24" height="24">
             <use href="./images/svg/symbol-defs.svg#close-black"></use>
         </svg>
     </button>
