--- a/src/sass/components/_header.scss
+++ b/src/sass/components/_header.scss
@@ -12,6 +12,10 @@
         align-items: center;
         justify-content: center;
     }
+
+    @media screen and (min-width:1200px) {
+        justify-content: space-between;
+    }
 }
 
 .header__mobile {
@@ -25,9 +29,7 @@
         align-items: center;
     }
 
-    @media screen and (min-width:1200px) {
-        gap: 300px;
-    }
+
 }
 
 .burger {
@@ -90,4 +92,19 @@
 .header__list {
     display: flex;
     gap: 28px;
+}
+
+.list__text {
+        font-weight: 700;
+        font-size: 16px;
+        line-height: calc(20 / 16);
+        color: #FCFCFC;
+        transition-property: color;
+        transition-duration: 250ms;
+        transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+
+        &:hover,
+        &:focus {
+            color: #F8D24E;
+        }
 }
