--- a/src/partials/nav-menu.html
+++ b/src/partials/nav-menu.html
@@ -35,13 +35,13 @@
       <a class="navigation__link" href="index.html">Home</a>
     </li>
     <li class="navigation__item">
-      <a class="navigation__link" href="#about">How it’s made?</a>
+      <a nav-link1 class="navigation__link" href="#about">How it’s made?</a>
     </li>
     <li class="navigation__item">
-      <a class="navigation__link" href="#products">Our products</a>
+      <a nav-link2 class="navigation__link" href="#products">Our products</a>
     </li>
     <li class="navigation__item">
-      <a class="navigation__link" href="#contacts">Contact</a>
+      <a nav-link3 class="navigation__link" href="#contacts">Contact</a>
     </li>
   </ul>
   <button class="nav-button">
