--- a/src/sass/main.css
+++ b/src/sass/main.css
@@ -133,7 +133,7 @@ button {
   text-align: center;
   justify-content: center;
   gap: 8px;
-  background-color: #F8D24E;
+  background-color: #f8d24e;
   width: 152px;
   height: 42px;
   border-radius: 10px;
@@ -143,15 +143,15 @@ button {
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 .header__button:hover {
-  background-color: #0A8817;
+  background-color: #0a8817;
 }
 .header__button:focus {
-  background-color: #0A8817;
+  background-color: #0a8817;
   color: #fff;
   fill: #fff;
 }
 .header__button:disabled {
-  background-color: #ABABAB;
+  background-color: #ababab;
 }
 @media screen and (max-width: 767px) {
   .header__button {
@@ -2382,6 +2382,30 @@ textarea {
     left: 16px;
     bottom: 65px;
   }
+}
+
+.burger-toggle {
+  transition: transform 500ms cubic-bezier(0.4, 0, 0.2, 1), color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  z-index: 10;
+}
+.burger-toggle__icon {
+  fill: currentColor;
+}
+.burger-toggle:hover, .burger-toggle:focus {
+  color: #f8d24e;
+}
+.burger-toggle:active {
+  transform: scale(1.5);
+  transition: transform 500ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.burger-toggle .cross {
+  display: none;
+}
+.burger-toggle--enabled .cross {
+  display: block;
+}
+.burger-toggle--enabled .burger {
+  display: none;
 }
 
 .gallery {
