--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -25,6 +25,6 @@
 @import './components/nav-menu';
 @import './components/nav-button';
 @import './components/hero';
-
+@import './components/burger-toggle';
 // gallery
-@import './components/gallery'
+@import './components/gallery';
