--- a/src/sass/components/_contacts.scss
+++ b/src/sass/components/_contacts.scss
@@ -1,6 +1,6 @@
 .contacts {
   position: relative;
-  top: 1130px;
+  top: 1080px;
 
   @media screen and (max-width: 767px) {
     padding-top: 20px;
@@ -40,6 +40,10 @@
   box-shadow: 0px 8px 30px rgba(212, 20, 67, 0.1);
   border-radius: 24px;
   padding: 40px 32px;
+
+  @media screen and (max-width: 767px) {
+    padding: 40px 32px 24px;
+  }
 
   @media screen and (min-width: 768px) {
     padding: 40px 24px;
