--- a/src/partials/modal-backdrop.html
+++ b/src/partials/modal-backdrop.html
@@ -50,8 +50,8 @@
       <input
         class="modal-form__input"
         type="text"
-        name="name"
-        id="name"
+        name="user-name"
+        id="user-name"
         placeholder=" "
       />
       <label class="modal-form__label" for="name">Name</label>
@@ -60,8 +60,8 @@
       <input
         class="modal-form__input"
         type="tel"
-        name="tel"
-        id="tel"
+        name="user-tel"
+        id="user-tel"
         placeholder=" "
       />
       <label class="modal-form__label" for="tel">Phone</label>
@@ -70,8 +70,8 @@
       <input
         class="modal-form__input"
         type="email"
-        name="mail"
-        id="mail"
+        name="user-mail"
+        id="user-mail"
         placeholder=" "
       />
       <label class="modal-form__label" for="mail">Email</label>
@@ -79,8 +79,8 @@
     <li class="modal-form__item">
       <textarea
         class="modal-form__textarea"
-        name="comment"
-        id="comment"
+        name="user-comment"
+        id="user-comment"
         cols="3"
         rows="4"
         placeholder=" "
