--- a/src/sass/components/_advantages.scss
+++ b/src/sass/components/_advantages.scss
@@ -1,15 +1,15 @@
 .container-advantages {
-    padding-top: 50px;
-    padding-bottom: 32px;
+    padding-top: 25px;
+    padding-bottom: 79px;
 
     @media screen and (min-width: 768px) {
-        padding-top: 60px;
-        padding-bottom: 60px;
+        padding-top: 43px;
+        padding-bottom: 204px;
     }
 
     @media screen and (min-width: 1200px) {
-        padding-top: 65px;
-        padding-bottom: 75px;
+        padding-top: 49px;
+        padding-bottom: 200px;
     }
 }
 
@@ -70,7 +70,7 @@
     color: getColor(primary-light);
 
     @media screen and (min-width: 768px) {
-
+        text-transform: lowercase;
         margin-bottom: 12px;
         font-size: 48px;
         line-height: calc(58.51/48);
@@ -154,7 +154,7 @@
     }
 
     @media screen and (min-width: 1200px) {
-        font-size: 16px;
+        font-size: 17px;
         line-height: calc(28.16/16);
     }
 }
