--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -30,7 +30,7 @@
     <li class="list__text">Contact</li>
   </ul>
 
-  <button type="button" class="header__button">
+  <button class="header__button js-open-modal" data-modal="3" type="button">
     Buy now
     <svg class="" width="12" height="12">
       <use href="./images/svg/symbol-defs.svg#bird"></use>
