--- a/src/sass/components/_hero.scss
+++ b/src/sass/components/_hero.scss
@@ -3,19 +3,46 @@
   padding-top: 38px;
   padding-bottom: 236px;
 
-  background-image: url('../images/hero/hero-dots/dots_mobile.png');
+  background-image: url('../images/hero/hero-dots/mobile@1x.png');
+  background-size: 320px 50px;
   background-repeat: no-repeat;
-  //   background-position: left 0px bottom 0px;
-  background-position: bottom 0px center;
+  background-position: bottom 0px left 50%;
 
+  @media (min-device-pixel-ratio: 2),
+    (min-resolution: 192dpi),
+    (min-resolution: 2dppx) {
+    .box {
+      background-image: url('../images/hero/hero-dots/mobile@2x.png');
+    }
+  }
   @media screen and (min-width: 768px) {
+    padding-top: 4px;
     padding-bottom: 24px;
     background-image: url('../images/hero/hero-dots/tablet@1x.png');
+    background-size: 768px 68px;
+
+    @media (min-device-pixel-ratio: 2),
+      (min-resolution: 192dpi),
+      (min-resolution: 2dppx) {
+      .box {
+        background-image: url('../images/hero/hero-dots/tablet@2x.png');
+      }
+    }
   }
 
   @media screen and (min-width: 1200px) {
+    padding-top: 33px;
     padding-bottom: 103px;
-    background-image: url('../images/hero/hero-dots/dots_1200.png');
+    background-image: url('../images/hero/hero-dots/desktop@1x.png');
+    background-size: 1200px 384px;
+
+    @media (min-device-pixel-ratio: 2),
+      (min-resolution: 192dpi),
+      (min-resolution: 2dppx) {
+      .box {
+        background-image: url('../images/hero/hero-dots/desktop@2x.png');
+      }
+    }
   }
 }
 
@@ -41,7 +68,7 @@
   font-style: normal;
   font-weight: 400;
   font-size: 26px;
-  line-height: 33px;
+  line-height: calc(33 / 26);
   letter-spacing: 0.04em;
   text-transform: uppercase;
 
@@ -56,7 +83,7 @@
     margin-bottom: 28px;
     max-width: 367px;
     font-size: 38px;
-    line-height: 48px;
+    line-height: calc(48 / 38);
   }
 }
 
@@ -66,7 +93,7 @@
 
   @media screen and (min-width: 1200px) {
     font-size: 38px;
-    line-height: 48px;
+    line-height: calc(48 / 38);
   }
 }
 
@@ -88,7 +115,7 @@
   font-style: normal;
   font-weight: 600;
   font-size: 12px;
-  line-height: 15px;
+  line-height: calc(15 / 12);
   display: flex;
   align-items: center;
   text-align: center;
@@ -97,8 +124,8 @@
 
   border: 2px solid getColor(accent);
   border-radius: 8px;
-  transition: color 2500ms cubic-bezier(0.4, 0, 0.2, 1),
-    border-color 2500ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
   &:hover {
     border-color: getColor(active-green);
@@ -107,7 +134,7 @@
     border-color: getColor(active-green);
     @media screen and (min-width: 1200px) {
       color: #fcfcfc;
-      border-color: getColor(active-green);
+      // border-color: getColor(active-green);
     }
   }
 
@@ -119,7 +146,7 @@
     padding: 12px 32px;
 
     font-size: 14px;
-    line-height: 18px;
+    line-height: calc(18 / 14);
     border-radius: 10px;
   }
 }
@@ -133,15 +160,14 @@
   font-style: normal;
   font-weight: 600;
   font-size: 12px;
-  line-height: 15px;
-  // display: flex;
+  line-height: calc(15 / 12);
   align-items: center;
   text-align: center;
   text-decoration-line: underline;
 
   color: getColor(accent);
 
-  transition: color 2500ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
   &:hover {
     color: getColor(active-green);
@@ -167,7 +193,7 @@
     // min-width: 111px;
 
     font-size: 14px;
-    line-height: 17px;
+    line-height: calc(17 / 14);
   }
 }
 
@@ -196,7 +222,7 @@
   font-style: normal;
   font-weight: 900;
   font-size: 28px;
-  line-height: 34px;
+  line-height: calc(34 / 28);
   text-align: right;
   letter-spacing: 0.04em;
   text-transform: uppercase;
@@ -205,7 +231,7 @@
 
   @media screen and (min-width: 1200px) {
     font-size: 46px;
-    line-height: 56px;
+    line-height: calc(56 / 46);
   }
 }
 
@@ -214,7 +240,7 @@
   font-style: normal;
   font-weight: 400;
   font-size: 8px;
-  line-height: 10px;
+  line-height: calc(10 / 8);
 
   text-align: right;
 
@@ -222,23 +248,13 @@
 
   @media screen and (min-width: 1200px) {
     font-size: 14px;
-    line-height: 17px;
+    line-height: calc(17 / 14);
   }
 }
 
-.hero__text {
+.hero__text-box {
   max-width: 139px;
   margin-left: 184px;
-
-  font-family: 'Montserrat';
-  font-style: normal;
-  font-weight: 400;
-  font-size: 12px;
-  line-height: 140%;
-  /* or 17px */
-
-  color: #fcfcfc;
-
   @media screen and (max-width: 767px) {
     display: none;
   }
@@ -246,20 +262,48 @@
   @media screen and (min-width: 1200px) {
     max-width: 201px;
     margin-left: 241px;
+  }
+}
 
+.hero__text {
+  font-family: 'Montserrat';
+  font-style: normal;
+  font-weight: 400;
+  font-size: 12px;
+  line-height: calc(17 / 12);
+  /* or 17px */
+
+  color: #fcfcfc;
+  @media screen and (min-width: 1200px) {
     font-size: 14px;
-    line-height: 20px;
+    line-height: calc(20 / 14);
+  }
+}
+
+.hero__text-button {
+  display: block;
+  margin-top: 12px;
+  padding: 0;
+
+  background: none;
+  border: none;
+  color: #fcfcfc;
+
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
+  @media screen and (min-width: 1200px) {
+    margin-top: 24px;
+  }
+  &:hover,
+  &:focus {
+    color: #000000;
   }
 }
 
 .hero__text-arrow {
   display: block;
-  margin-top: 12px;
-  fill: #fcfcfc;
 
-  @media screen and (min-width: 1200px) {
-    margin-top: 24px;
-  }
+  fill: currentColor;
 }
 
 .hero__fun-ice {
