--- a/src/partials/about.html
+++ b/src/partials/about.html
@@ -28,7 +28,8 @@
                 coffee for any mood!</p>
             
         <button type="button" 
-                class="about__btn">
+                class="about__btn js-open-modal"
+                data-modal="4">
                 <span class="about__btn--text">Read more</span> 
                 <svg class="about__btn--img" width="12" height="12">
                     <use href="./images/svg/symbol-defs.svg#bird"></use>
