--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -28,4 +28,5 @@
 @import './components/burger-toggle';
 // gallery
 @import './components/gallery';
-
+// modal-about
+@import './components/modal-about';
