--- a/src/sass/main.css
+++ b/src/sass/main.css
@@ -2535,4 +2535,110 @@ textarea {
   .gallery__card {
     width: 1013px;
   }
+}
+
+.overlay {
+  opacity: 0;
+  visibility: hidden;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.5);
+  z-index: 20;
+  transition: 0.3s all;
+}
+
+.modal {
+  opacity: 0;
+  visibility: hidden;
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  z-index: 100;
+  transition: 0.3s all;
+}
+
+.modal.active,
+.overlay.active {
+  opacity: 1;
+  visibility: visible;
+}
+
+.modal-about__window {
+  position: relative;
+  width: 568px;
+  padding: 32px 60px;
+  background-color: #fcfcfc;
+  border: 2px solid #f8d24e;
+  border-radius: 10px;
+}
+@media screen and (max-width: 767px) {
+  .modal-about__window {
+    width: 280px;
+    padding: 28px;
+  }
+}
+
+.modal-window__close {
+  position: absolute;
+  top: 12px;
+  right: 12px;
+  fill: #131313;
+  border: none;
+  background-color: transparent;
+}
+
+@media screen and (max-width: 767px) {
+  .modal-window__svg {
+    width: 20px;
+    height: 20px;
+  }
+}
+
+.modal-about__title {
+  font-family: "Seymour One", sans-serif;
+  font-size: 20px;
+  line-height: 1.4;
+  text-align: center;
+}
+@media screen and (max-width: 767px) {
+  .modal-about__title {
+    font-size: 16px;
+    line-height: 1.5 24px;
+  }
+}
+
+.modal-about__svg {
+  width: 448px;
+  height: 205px;
+  margin-top: 32px;
+  padding: 85px 98px;
+  border-radius: 10px;
+  fill: #ffffff;
+  background-color: #000000;
+}
+@media screen and (max-width: 767px) {
+  .modal-about__svg {
+    width: 224px;
+    height: 199px;
+  }
+}
+
+.modal-about__text {
+  margin-top: 32px;
+  width: 448px;
+  font-family: "Montserrat";
+  font-size: 16px;
+  line-height: 1.375;
+  color: #131313;
+}
+@media screen and (max-width: 767px) {
+  .modal-about__text {
+    width: 224px;
+    font-size: 14px;
+    line-height: 1.4285714286;
+  }
 }/*# sourceMappingURL=main.css.map */
