Додає модалку (без картинки(!))

--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -12,6 +12,7 @@
 @import './components/products';
 @import './components/products_modal';
 @import './components/about';
+@import './components/modal-ingredients';
 
 // bacdrop-modal
 @import './components/backdrop-modal';
