--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -26,8 +26,8 @@
       toggle
       class="burger burger-toggle"
       aria-label="open menu"
-      aria-expanded="false"
-    >
+      aria-expanded="false">
+      
       <svg class="" width="32" height="32">
         <use class="burger" href="./images/svg/symbol-defs.svg#burger1"></use>
         <use
