--- a/src/sass/components/_header.scss
+++ b/src/sass/components/_header.scss
@@ -2,6 +2,13 @@
   padding-top: 12px;
   padding-bottom: 12px;
 
+@media screen and (max-width: 319px) {
+        width: 100vw;
+    }
+
+    @media screen and (max-width:767px) {
+        width: 320px;
+    }
 
     @media screen and (min-width:768px) {
         display: flex;
@@ -14,17 +21,7 @@
         justify-content: space-between;
     }
 
-  @media screen and (max-width: 319px) {
-    width: 100wv;
-  }
-
-  @media screen and (min-width: 768px) {
-    display: flex;
-    gap: 32px;
-    align-items: center;
-    justify-content: center;
-  }
-
+  
 }
 
 .header__mobile {
@@ -38,6 +35,8 @@
         justify-content: center;
         align-items: center;
     }
+
+
 
 
 }
@@ -60,17 +59,6 @@
     justify-content: center;
     align-items: center;
   }
-}
-
-.burger {
-  fill: getColor(primary-white);
-  padding-left: 0;
-  padding-right: 0;
-  display: flex;
-  align-items: center;
-  background-color: transparent;
-  border: none;
-
 }
 
 .header__button {
@@ -119,6 +107,10 @@
 .header__list {
     display: flex;
     gap: 28px;
+
+    @media screen and (max-width:1200px) {
+        display: none;
+    }
 }
 
 .list__text {
