--- a/src/partials/products.html
+++ b/src/partials/products.html
@@ -10,7 +10,7 @@
           Soft ice cream with a delicate taste. Made with milk, cream, sugar and
           natural stabilizer
         </p>
-        <button type="button" class="products__btn">
+        <button type="button" class="products__btn js-open-modal" data-modal="5">
           <svg class="" width="40" height="16">
             <use href="./images/svg/symbol-defs.svg#arrow"></use>
           </svg>
@@ -23,7 +23,7 @@
           Fragrant invigorating drink created from 100% natural ingredients
           without the use of preservatives and flavor enhancers
         </p>
-        <button type="button" class="products__btn">
+        <button type="button" class="products__btn js-open-modal" data-modal="5">
           <svg class="" width="40" height="16">
             <use href="./images/svg/symbol-defs.svg#arrow"></use>
           </svg>
@@ -36,7 +36,7 @@
           Sweet drinks based on milk and ice cream, supplemented with syrups,
           fruits, berries and other sweets of your choice
         </p>
-        <button type="button" class="products__btn">
+        <button type="button" class="products__btn js-open-modal" data-modal="5">
           <svg class="" width="40" height="16">
             <use href="./images/svg/symbol-defs.svg#arrow"></use>
           </svg>
