--- a/src/partials/customer-revievs.html
+++ b/src/partials/customer-revievs.html
@@ -3,11 +3,12 @@
     <img
       class="customer-img"
       srcset="
-        ./images/cast-rev/lady/lady_85.jpg,
-        ./images/cast-rev/lady/lady_170.jpg
+        ./images/cast-rev/lady/lady_85.jpg  1x,
+        ./images/cast-rev/lady/lady_170.jpg 2x
       "
-      src="./images/cast-rev/lady/lady_85.jpg "
+      src="./images/cast-rev/lady/lady_170.jpg "
       alt="lady"
+      width="85"
     />
     <div class="customer__text-container">
       <p class="customer-text">
