add js for buy-button

--- a/src/partials/nav-menu.html
+++ b/src/partials/nav-menu.html
@@ -44,7 +44,7 @@
       <a nav-link3 class="navigation__link" href="#contacts">Contact</a>
     </li>
   </ul>
-  <button class="nav-button">
+  <button buy-button data-modal="3" class="nav-button js-open-modal">
     Buy now
     <svg class="nav-button__icon" width="12" height="12">
       <use href="./images/svg/symbol-defs.svg#bird"></use>
